--- a/lab02/volumen/templates/formulariovol.html
+++ b/lab02/volumen/templates/formulariovol.html
@@ -18,7 +18,7 @@
 
     <header>
         <div class="px-3 py-2 text-bg-dark">
-            <div class="container" >
+            <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <a href="/"
                         class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
@@ -66,93 +66,44 @@
     </header>
     <div class="bg-dark bg-gradient">
         <div class="container">
+            <section class="p-3">
+                <div class="row mb-3">
+                    <h2 class="modal-title" style="padding: 20px; color: rgb(204, 204, 204);">{{ titulo }}</h2>
+                </div>
+                <form class="row g-3" action="{% url 'volumen:volumencalc' %}" method="post">
+                    {% csrf_token %}
+                    <!--primer valor-->
+                    <div class="row mb-3">
+                        <label class="col-sm-2 col-form-label"  style="color: rgb(204, 204, 204);">Introduzca el diametro en metros: </label>
+                        <div class="col-sm-5">
+                            <input type="number" class="form-control" id="inputName3" name="diametro" style="border: 1px solid rgb(145, 140, 140);" required>
+                        </div>
+                    </div>
+
+                    <!--Segundo valor-->
+                    <div class="row mb-3">
+                        <label class="col-sm-2 col-form-label" style="color: rgb(204, 204, 204);">Indroduzca la altura en metros:</label>
+                        <div class="col-sm-5">
+                            <input type="number" class="form-control" id="inputPassword3" name="altura" style="border: 1px solid rgb(145, 140, 140);" required>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary col-sm-2">Calcular</button>
+                </form>
+            </section>
+
             <div class="row mb-3">
-                <h2 class="modal-title" style="text-align: center; color: rgb(204, 204, 204);">{{ titulo }}</h2>
-            </div >
-            <table class="table" style="color: rgb(204, 204, 204);">
-                <thead>
-                    <tr>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Clave</th>
-                        <th scope="col">Educación</th>
-                        <th scope="col">Nacionalidad</th>
-                        <th scope="col">Idiomas</th>
-                        <th scope="col">Email</th>
-                        <th scope="col">Sitio Web</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>{{ nombre }}</td>
-                        <td>{{ clave }}</td>
-                        <td>{{ educacion }}</td>
-                        <td>{{ nacionalidad }}</td>
-                        <td>
-                            {% for item in idiomas %}
-                            <li style="list-style-type: none;">{{ item }}</li>
-                            {% endfor %}
-                        </td>
-                        <td>{{ correo }}</td>
-                        <td>{{ website }}</td>
-                    </tr>
-
-                    <tr>
-                        <td>{{ nombre }}</td>
-                        <td>{{ clave }}</td>
-                        <td>{{ educacion }}</td>
-                        <td>{{ nacionalidad }}</td>
-                        <td>
-                            {% for item in idiomas %}
-                            <li style="list-style-type: none;">{{ item }}</li>
-                            {% endfor %}
-                        </td>
-                        <td>{{ correo }}</td>
-                        <td>{{ website }}</td>
-                    </tr>
-
-                    <tr>
-                        <td>{{ nombre }}</td>
-                        <td>{{ clave }}</td>
-                        <td>{{ educacion }}</td>
-                        <td>{{ nacionalidad }}</td>
-                        <td>
-                            {% for item in idiomas %}
-                            <li style="list-style-type: none;">{{ item }}</li>
-                            {% endfor %}
-                        </td>
-                        <td>{{ correo }}</td>
-                        <td>{{ website }}</td>
-                    </tr>
-
-                    <tr>
-                        <td>{{ nombre }}</td>
-                        <td>{{ clave }}</td>
-                        <td>{{ educacion }}</td>
-                        <td>{{ nacionalidad }}</td>
-                        <td>
-                            {% for item in idiomas %}
-                            <li style="list-style-type: none;">{{ item }}</li>
-                            {% endfor %}
-                        </td>
-                        <td>{{ correo }}</td>
-                        <td>{{ website }}</td>
-                    </tr>
-
-                    <tr>
-                        <td>{{ nombre }}</td>
-                        <td>{{ clave }}</td>
-                        <td>{{ educacion }}</td>
-                        <td>{{ nacionalidad }}</td>
-                        <td>
-                            {% for item in idiomas %}
-                            <li style="list-style-type: none;">{{ item }}</li>
-                            {% endfor %}
-                        </td>
-                        <td>{{ correo }}</td>
-                        <td>{{ website }}</td>
-                    </tr>
-                </tbody>
-            </table>
+                <div class="card" style="width: 27rem; height: 15rem;">
+                    <img src="https://1.bp.blogspot.com/-tF3CULUkPaU/XhcpXlO0MtI/AAAAAAAAJKE/ZbH6OizLaLENKharnHRthmecfXqhFNcagCLcBGAsYHQ/s1600/2.jpg" class="card-img-top" alt="..." style="height: 15rem;">
+                </div>
+                <div class="card" style="width: 27rem; height: 15rem;">
+                    <img src="https://tutorias.co/wp-content/uploads/2018/09/sumaDivisionesAscendentesPython-768x489.jpg" class="card-img-top" alt="..." style="height: 15rem;">
+                </div>
+                <div class="card" style="width: 27rem; height: 10rem;">
+                    <img src="https://i.ytimg.com/vi/muApGk7Y5EY/maxresdefault.jpg" class="card-img-top" alt="..." style="height: 15rem;">
+                </div>
+            </div>
+            <br>
+            <br>
         </div>
     </div>
     <div class="container">
