--- a/lab02/encuesta/templates/encuesta/formulario.html
+++ b/lab02/encuesta/templates/encuesta/formulario.html
@@ -29,12 +29,12 @@
 
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
-                            <a href="/" class="nav-link text-secondary">
+                            <a href="/" class="nav-link text-white">
                                 Home
                             </a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-white" href="#" role="button"
+                            <a class="nav-link dropdown-toggle text-secondary" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Formularios
                             </a>
