--- a/lab02/encuesta/templates/encuesta/respuesta.html
+++ b/lab02/encuesta/templates/encuesta/respuesta.html
@@ -29,7 +29,7 @@
 
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
-                            <a href="/" class="nav-link text-secondary">
+                            <a href="/" class="nav-link text-white">
                                 Home
                             </a>
                         </li>
@@ -47,7 +47,7 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-white" href="#" role="button"
+                            <a class="nav-link dropdown-toggle text-secondary" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Respuestas
                             </a>
